--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./style.css">
         <title>Landing Page</title>
     </head>
 
     <body>
-        
+
     </body>
 </html>
