--- a/index.html
+++ b/index.html
@@ -7,6 +7,44 @@
     </head>
 
     <body>
-
+        <div class="nav-bar">
+            <h1>Header Logo</h1>
+            <ul>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+            </ul>
+        </div>>
+        <div class="splash">
+            <h2>This website is awesome</h2>
+            <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
+            <a href="">Sign up</a>
+            <img src="" alt="this is a placeholder for an image">
+        </div>
+        <div class="content">
+            <h2>Some random information.</h2>
+            <img src="">
+            <p>this is some subtext under an illustration or image</p>
+            <img src="">
+            <p>this is some subtext under an illustration or image</p>
+            <img src="">
+            <p>this is some subtext under an illustration or image</p>
+            <img src="">
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="quote">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p>-Thor, God of Thunder</p>
+        </div>\
+        <div class="call">
+            <h2>Call to action! It's time!</h2>
+            <p>Sign up for our product by clicking that button right over there!</p>
+            <a href="">Sign up</a>
+        </div>
+        <footer>
+            <small>
+                Copyright © The Odin Project 2021
+            </small>
+        </footer>
     </body>
 </html>
