--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="">header link two</a></li>
                 <li><a href="">header link three</a></li>
             </ul>
-        </div>>
+        </div>
         <div class="splash">
             <h2>This website is awesome</h2>
             <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
@@ -35,7 +35,7 @@
         <div class="quote">
             <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p>-Thor, God of Thunder</p>
-        </div>\
+        </div>
         <div class="call">
             <h2>Call to action! It's time!</h2>
             <p>Sign up for our product by clicking that button right over there!</p>
