Change some links to buttons

--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
         <div class="nav-bar">
             <h1>Header Logo</h1>
             <ul>
-                <li><a href="">header link one</a></li>
-                <li><a href="">header link two</a></li>
-                <li><a href="">header link three</a></li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </div>
         <div class="splash">
             <h2>This website is awesome</h2>
             <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
-            <a href="">Sign up</a>
-            <img src="" alt="this is a placeholder for an image">
+            <button><a href="#">Sign up</a></button>
+            <img src="#" alt="this is a placeholder for an image">
         </div>
         <div class="content">
             <h2>Some random information.</h2>
-            <img src="">
+            <img src="#">
             <p>this is some subtext under an illustration or image</p>
-            <img src="">
+            <img src="#">
             <p>this is some subtext under an illustration or image</p>
-            <img src="">
+            <img src="#">
             <p>this is some subtext under an illustration or image</p>
-            <img src="">
+            <img src="#">
             <p>this is some subtext under an illustration or image</p>
         </div>
         <div class="quote">
@@ -39,7 +39,7 @@
         <div class="call">
             <h2>Call to action! It's time!</h2>
             <p>Sign up for our product by clicking that button right over there!</p>
-            <a href="">Sign up</a>
+            <button><a href="#">Sign up</a></button>
         </div>
         <footer>
             <small>
