--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>this is some subtext under an illustration or image</p>
         </div>
         <div class="quote">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <quote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</quote>
             <p>-Thor, God of Thunder</p>
         </div>
         <div class="call">
