--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="call">
             <h2>Call to action! It's time!</h2>
             <p>Sign up for our product by clicking that button right over there!</p>
-            <button><a href="#">Sign up</a></button>
+            <button class="call"><a href="#">Sign up</a></button>
         </div>
         <footer>
             <small>
